# roamex

./: README.md
.github/workflows/: ci.yml  nightly.yml  release.yml
roamex/: BUILD.gn
roamex/app/: sparkle-Info.plist
roamex/common/: BUILD.gn
roamex/patches/: 0008-vertical-tab-strip-roamex-placement.patch  0013-edge-chromium-importer.patch  0024-signin-opt-in-flags-settings-inert-gate.patch  README.md
roamex/test/: edge_indexed_db_reader_unittest.cc  edge_profile_reader_unittest.cc  roamex_edge_import_coordinator_browsertest.cc  roamex_edge_import_driver_browsertest.cc  roamex_edge_import_driver_unittest.cc  roamex_edge_importer_unittest.cc  roamex_indexed_db_import_browsertest.cc  roamex_indexed_db_import_stage_unittest.cc  roamex_initial_url_browsertest.cc  roamex_signin_optin_browsertest.cc  roamex_signin_surface_sweep_browsertest.cc  roamex_three_carrier_survival_browsertest.cc  roamex_vertical_strip_placement_browsertest.cc  tab_initial_url_helper_unittest.cc
roamux/: BUILD.gn
roamux/app/resources/theme/: BUILD.gn  roamux_theme_resources.grd
roamux/common/: roamux_features.cc
roamux/patches/: 0008-vertical-tab-strip-roamux-placement.patch  0011-shared-shortcut-settings.patch  0037-current-channel-logo-roamux.patch  0044-initial-url-flags-entry.patch  README.md
roamux/test/: edge_profile_reader_unittest.cc  roamux_bookmark_subfolder_groups_browsertest.cc  roamux_edge_import_driver_unittest.cc  roamux_features_unittest.cc  roamux_shortcuts_browsertest.mm  roamux_smoke_unittest.cc  roamux_theme_logo_browsertest.cc  (+2 more)
scripts/checks/: secret_scan.py
(+39 files in other folders)
